Implemented search and pagination filters

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,7 @@
 NotBlank={0} é obrigatório
 NotNull={0} não pode ser nulo
+typeMismatch.java.time.OffsetDateTime={0} deve ser uma data/hora válida
+typeMismatch.java.lang.Long={0} deve ser um número válido
 
 nome=Nome
 descricao=Descrição
@@ -14,3 +16,7 @@ postagemInput.autor.id=Nome do autor
 
 # Cometario
 comentarioInput.usuario.id=Id do usuário
+
+# Postagem Filter
+postagemFilter.dataPostagem= Data de criação da postagem 
+postagemFilter.autorId= Código do cliente
