Added PhotoPost service and controller

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,9 @@ comentarioInput.usuario.id=Id do usuário
 # Postagem Filter
 postagemFilter.dataPostagem= Data de criação da postagem 
 postagemFilter.autorId= Código do cliente
+
+# Foto Postagem
+fotoPostagemInput.arquivo=Arquivo da foto
+fotoPostagemInput.descricao=Descrição da foto
+FileSize.fotoPostagemInput.arquivo=A foto deve ter um tamanho máximo de {1}
+FileContentType.fotoPostagemInput.arquivo=A foto deve ser do tipo JPG ou PNG
