--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -26,3 +26,6 @@ fotoPostagemInput.arquivo=Arquivo da foto
 fotoPostagemInput.descricao=Descrição da foto
 FileSize.fotoPostagemInput.arquivo=A foto deve ter um tamanho máximo de {1}
 FileContentType.fotoPostagemInput.arquivo=A foto deve ser do tipo JPG ou PNG
+
+scope.READ=Acesso de leitura
+scope.WRITE=Acesso de escrita
